# litellm-agentic-examples

./: .buildinfo  .gitignore  .pre-commit-config.yaml  DOCUMENTATION_SETUP.md  JAVASCRIPT_EXAMPLES.md  LlamaIndex_litellm.py  PROXY_SETUP.md  README.md  copy_notebooks.sh  crewai_litellm_lib.py  crewai_litellm_proxy.py  genindex.html  google_adk.py  index.html  langgraph_agent.py  objects.inv  opan_ai_litellm.py  openai_adk.py  proxy_set_up.ipynb  pydantic_ai_litellm_proxy.py  pyproject.toml  requirements-docs.txt  search.html  searchindex.js  smolagents_litellm.py
.doctrees/: environment.pickle  index.doctree
LlamaIndex_example/: LlamaIndex_litellm.ipynb  LlamaIndex_litellm.py
_notebooks/: PROXY_SETUP.html  proxy_set_up.html
_sources/: index.rst.txt
ag2_example/: ag2_litellm.ipynb  ag2_litellm.py  ag2_litellm_proxy.ipynb  ag2_litellm_proxy.py
agentscope_example/: agentscope_litellm.ipynb  agentscope_litellm.py
aws_strands_example/: aws_strands.ipynb  aws_strands.py
crewai_example/: crewai_litellm_lib.ipynb  crewai_litellm_lib.py  crewai_litellm_proxy.ipynb  crewai_litellm_proxy.py
docs/: index.html
google_adk_example/: google_adk.ipynb  google_adk.py
langgraph_example/: langgraph_agent.ipynb  langgraph_agent.py
microsoft_agent_example/: microsoft_agent_litellm.ipynb  microsoft_agent_litellm.py  microsoft_agent_litellm_proxy.ipynb  microsoft_agent_litellm_proxy.py
openai_adk_example/: openai_adk.ipynb  openai_adk.py
pydantic_ai_example/: pydantic_ai_litellm_proxy.ipynb  pydantic_ai_litellm_proxy.py
smalagents_example/: smolagents_litellm.ipynb
(+43 files in other folders)
